<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_pf"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true">


    <ImageView
        style="?pf_lock_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/PFLockScreenStyle" />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:paddingBottom="60dp">

        <TextView
            android:id="@+id/title_text_view"
            style="?pf_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:text="@string/lock_screen_title_pf"
            android:theme="@style/PFLockScreenTitleTextStyle" />

        <com.beautycoder.pflockscreen.views.PFCodeView
            android:id="@+id/code_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/button_1"
                    style="?pf_key_button"
                    android:layout_width="@dimen/button_lock_screen_fp_size"
                    android:layout_height="@dimen/button_lock_screen_fp_size"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="1"
                    android:theme="@style/PFLockScreenButtonStyle" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/button_2"
                    style="?pf_key_button"
                    android:layout_width="@dimen/button_lock_screen_fp_size"
                    android:layout_height="@dimen/button_lock_screen_fp_size"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="2"
                    android:theme="@style/PFLockScreenButtonStyle" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/button_3"
                    style="?pf_key_button"
                    android:layout_width="@dimen/button_lock_screen_fp_size"
                    android:layout_height="@dimen/button_lock_screen_fp_size"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="3"
                    android:theme="@style/PFLockScreenButtonStyle" />
            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/button_4"
                    style="?pf_key_button"
                    android:layout_width="@dimen/button_lock_screen_fp_size"
                    android:layout_height="@dimen/button_lock_screen_fp_size"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="4"
                    android:theme="@style/PFLockScreenButtonStyle" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/button_5"
                    style="?pf_key_button"
                    android:layout_width="@dimen/button_lock_screen_fp_size"
                    android:layout_height="@dimen/button_lock_screen_fp_size"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="5"
                    android:theme="@style/PFLockScreenButtonStyle" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/button_6"
                    style="?pf_key_button"
                    android:layout_width="@dimen/button_lock_screen_fp_size"
                    android:layout_height="@dimen/button_lock_screen_fp_size"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="6"
                    android:theme="@style/PFLockScreenButtonStyle" />
            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/button_7"
                    style="?pf_key_button"
                    android:layout_width="@dimen/button_lock_screen_fp_size"
                    android:layout_height="@dimen/button_lock_screen_fp_size"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="7"
                    android:theme="@style/PFLockScreenButtonStyle" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/button_8"
                    style="?pf_key_button"
                    android:layout_width="@dimen/button_lock_screen_fp_size"
                    android:layout_height="@dimen/button_lock_screen_fp_size"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="8"
                    android:theme="@style/PFLockScreenButtonStyle" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/button_9"
                    style="?pf_key_button"
                    android:layout_width="@dimen/button_lock_screen_fp_size"
                    android:layout_height="@dimen/button_lock_screen_fp_size"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="9"
                    android:theme="@style/PFLockScreenButtonStyle" />
            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/button_left"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:background="@drawable/side_button_background_pf"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:text="@string/forgot_pf"
                    android:theme="@style/PFLockScreenHintTextStyle"
                    style="?pf_hint"/>
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/button_0"
                    style="?pf_key_button"
                    android:layout_width="@dimen/button_lock_screen_fp_size"
                    android:layout_height="@dimen/button_lock_screen_fp_size"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="0"
                    android:theme="@style/PFLockScreenButtonStyle" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/button_right"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text=""
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/button_delete"
                    style="?pf_delete_button"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:background="@drawable/side_button_background_pf"
                    android:gravity="center"
                    android:text="fp"
                    android:theme="@style/PFLockScreenDeleteButtonStyle"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/button_finger_print"
                    style="?pf_fingerprint_button"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:background="@drawable/side_button_background_pf"
                    android:gravity="center"
                    android:text="fp"
                    android:theme="@style/PFLockScreenFingerPrintButtonStyle" />

            </FrameLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center">

        <Button
            android:id="@+id/button_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_pf"
            android:visibility="visible"
            android:theme="@style/PFLockScreenNextTextStyle"
            style="?pf_next"/>

    </LinearLayout>
</RelativeLayout>
